--- a/results/aHR0cHM6Ly9iZXRhLmdvdXYuZnI=/testssl.html
+++ b/results/aHR0cHM6Ly9iZXRhLmdvdXYuZnI=/testssl.html
@@ -21,13 +21,13 @@
 ###########################################################</span>
 
  Using &quot;OpenSSL 1.0.2-bad (1.0.2k-dev)&quot; [~183 ciphers]
- on fv-az702-144:/home/testssl/bin/openssl.Linux.x86_64
+ on fv-az849-313:/home/testssl/bin/openssl.Linux.x86_64
  (built: &quot;Sep  1 14:03:44 2022&quot;, platform: &quot;linux-x86_64&quot;)
 
 
 <span style="font-weight:bold;">Testing all IPv4 addresses (port 443): </span>109.232.236.90 5.104.101.30
 -----------------------------------------------------
-<span style="color:white;background-color:black;"> Start 2024-07-14 01:03:50                --&gt;&gt; 109.232.236.90:443 (beta.gouv.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Start 2024-07-21 01:04:33                --&gt;&gt; 109.232.236.90:443 (beta.gouv.fr) &lt;&lt;--</span>
 
  Further IP addresses:   5.104.101.30 
  rDNS (109.232.236.90):  ows-109-232-236-90.eu-west-2.compute.outscale.com.
@@ -101,25 +101,25 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Server key size              </span>RSA 2048 bits (exponent is 65537)
 <span style="font-weight:bold;"> Server key usage             </span>Digital Signature, Key Encipherment
 <span style="font-weight:bold;"> Server extended key usage    </span>TLS Web Server Authentication, TLS Web Client Authentication
-<span style="font-weight:bold;"> Serial                       </span>0450BEBF3A15ECEA707303F248D8C21B2A3F (OK: length 18)
-<span style="font-weight:bold;"> Fingerprints                 </span>SHA1 B7D01BBCB29F33E2E38E07FB4AF0C7E878F2766C
-                              SHA256 595349CD78E6A007ACFC2550274ADEE746D71BE914FF3E479A03BE3F886A9BFA
+<span style="font-weight:bold;"> Serial                       </span>04A807819F8BE63252CC416B25A09A885847 (OK: length 18)
+<span style="font-weight:bold;"> Fingerprints                 </span>SHA1 CCE02444CFBB8F3490F013024472D9B4E19A8B96
+                              SHA256 06087B9E754D37A67A3F5A1B42624FDD02429B3D5468FC659EDA19418440C176
 <span style="font-weight:bold;"> Common Name (CN)             </span><i>beta.gouv.fr </i> (CN in response to request w/o SNI: <i>*.osc-fr1.scalingo.io </i>)
 <span style="font-weight:bold;"> subjectAltName (SAN)         </span><i>beta.gouv.fr </i>
 <span style="font-weight:bold;"> Trust (hostname)             </span><span style="color:#008817;">Ok via SAN and CN</span> (SNI mandatory)
 <span style="font-weight:bold;"> Chain of trust</span>               <span style="color:#008817;">Ok   </span><span style="color:#cd00cd;"></span>
 <span style="font-weight:bold;"> EV cert</span> (experimental)       no 
-<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">33 &gt;= 30 days</span> (2024-05-18 07:30 --&gt; 2024-08-16 07:30)
+<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">86 &gt;= 30 days</span> (2024-07-17 07:31 --&gt; 2024-10-15 07:31)
 <span style="font-weight:bold;"> ETS/&quot;eTLS&quot;</span>, visibility info  not present
 <span style="font-weight:bold;"> Certificate Revocation List  </span>--
-<span style="font-weight:bold;"> OCSP URI                     </span>http://r3.o.lencr.org
+<span style="font-weight:bold;"> OCSP URI                     </span>http://r10.o.lencr.org
 <span style="font-weight:bold;"> OCSP stapling                </span><span style="color:#a86437;">not offered</span>
 <span style="font-weight:bold;"> OCSP must staple extension   </span>--
 <span style="font-weight:bold;"> DNS CAA RR</span> (experimental)    <span style="color:#a86437;">not offered</span>
 <span style="font-weight:bold;"> Certificate Transparency     </span><span style="color:#008817;">yes</span> (certificate extension)
 <span style="font-weight:bold;"> Certificates provided</span>        2
-<span style="font-weight:bold;"> Issuer                       </span><i>R3</i> (<i>Let&apos;s Encrypt</i> from <i>US</i>)
-<span style="font-weight:bold;"> Intermediate cert validity   </span>#1: <span style="color:#008817;">ok &gt; 40 days</span> (2025-09-15 16:00). <i>R3</i> &lt;-- <i>ISRG Root X1</i>
+<span style="font-weight:bold;"> Issuer                       </span><i>R10</i> (<i>Let&apos;s Encrypt</i> from <i>US</i>)
+<span style="font-weight:bold;"> Intermediate cert validity   </span>#1: <span style="color:#008817;">ok &gt; 40 days</span> (2027-03-12 23:59). <i>R10</i> &lt;-- <i>ISRG Root X1</i>
 <span style="font-weight:bold;"> Intermediate Bad OCSP</span> (exp.) <span style="color:#008817;">Ok</span>
 
 
@@ -153,7 +153,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> FREAK</span> (CVE-2015-0204)                     <span style="color:#008817;font-weight:bold;">not vulnerable (OK)</span>
 <span style="font-weight:bold;"> DROWN</span> (CVE-2016-0800, CVE-2016-0703)      <span style="color:#008817;font-weight:bold;">not vulnerable on this host and port (OK)</span>
                                            make sure you don&apos;t use this certificate elsewhere with SSLv2 enabled services, see
-                                           <a href="https://search.censys.io/search?resource=hosts&virtual_hosts=INCLUDE&q=595349CD78E6A007ACFC2550274ADEE746D71BE914FF3E479A03BE3F886A9BFA" style="color:black;text-decoration:none;">https://search.censys.io/search?resource=hosts&virtual_hosts=INCLUDE&q=595349CD78E6A007ACFC2550274ADEE746D71BE914FF3E479A03BE3F886A9BFA</a>
+                                           <a href="https://search.censys.io/search?resource=hosts&virtual_hosts=INCLUDE&q=06087B9E754D37A67A3F5A1B42624FDD02429B3D5468FC659EDA19418440C176" style="color:black;text-decoration:none;">https://search.censys.io/search?resource=hosts&virtual_hosts=INCLUDE&q=06087B9E754D37A67A3F5A1B42624FDD02429B3D5468FC659EDA19418440C176</a>
 <span style="font-weight:bold;"> LOGJAM</span> (CVE-2015-4000), experimental      <span style="color:#008817;">not vulnerable (OK):</span> no DH EXPORT ciphers, no common prime detected
 <span style="font-weight:bold;"> BEAST</span> (CVE-2011-3389)                     <span style="color:#008817;">not vulnerable (OK)</span>, no SSL3 or TLS1
 <span style="font-weight:bold;"> LUCKY13</span> (CVE-2013-0169), experimental     <span style="color:#008817;font-weight:bold;">not vulnerable (OK)</span>
@@ -212,10 +212,10 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Final Score                  </span>81
 <span style="font-weight:bold;"> Overall Grade                </span><span style="color:#008817;font-weight:bold;">A+</span>
 
-<span style="color:white;background-color:black;"> Done 2024-07-14 01:04:43 [  55s] --&gt;&gt; 109.232.236.90:443 (beta.gouv.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Done 2024-07-21 01:05:25 [  54s] --&gt;&gt; 109.232.236.90:443 (beta.gouv.fr) &lt;&lt;--</span>
 
 -----------------------------------------------------
-<span style="color:white;background-color:black;"> Start 2024-07-14 01:04:43                --&gt;&gt; 5.104.101.30:443 (beta.gouv.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Start 2024-07-21 01:05:25                --&gt;&gt; 5.104.101.30:443 (beta.gouv.fr) &lt;&lt;--</span>
 
  Further IP addresses:   109.232.236.90 
  rDNS (5.104.101.30):    ows-5-104-101-30.eu-west-2.compute.outscale.com.
@@ -281,7 +281,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
                               &quot;extended master secret/#23&quot;
 <span style="font-weight:bold;"> Session Ticket RFC 5077 hint </span>300 seconds, session tickets keys seems to be rotated &lt; daily
 <span style="font-weight:bold;"> SSL Session ID support       </span>yes
-<span style="font-weight:bold;"> Session Resumption           </span>Tickets no, ID: yes
+<span style="font-weight:bold;"> Session Resumption           </span>Tickets no, ID: no
 <span style="font-weight:bold;"> TLS clock skew</span>               Random values, no fingerprinting possible 
 <span style="font-weight:bold;"> Certificate Compression      </span>none
 <span style="font-weight:bold;"> Client Authentication        </span>none
@@ -289,25 +289,25 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Server key size              </span>RSA 2048 bits (exponent is 65537)
 <span style="font-weight:bold;"> Server key usage             </span>Digital Signature, Key Encipherment
 <span style="font-weight:bold;"> Server extended key usage    </span>TLS Web Server Authentication, TLS Web Client Authentication
-<span style="font-weight:bold;"> Serial                       </span>0450BEBF3A15ECEA707303F248D8C21B2A3F (OK: length 18)
-<span style="font-weight:bold;"> Fingerprints                 </span>SHA1 B7D01BBCB29F33E2E38E07FB4AF0C7E878F2766C
-                              SHA256 595349CD78E6A007ACFC2550274ADEE746D71BE914FF3E479A03BE3F886A9BFA
+<span style="font-weight:bold;"> Serial                       </span>04A807819F8BE63252CC416B25A09A885847 (OK: length 18)
+<span style="font-weight:bold;"> Fingerprints                 </span>SHA1 CCE02444CFBB8F3490F013024472D9B4E19A8B96
+                              SHA256 06087B9E754D37A67A3F5A1B42624FDD02429B3D5468FC659EDA19418440C176
 <span style="font-weight:bold;"> Common Name (CN)             </span><i>beta.gouv.fr </i> (CN in response to request w/o SNI: <i>*.osc-fr1.scalingo.io </i>)
 <span style="font-weight:bold;"> subjectAltName (SAN)         </span><i>beta.gouv.fr </i>
 <span style="font-weight:bold;"> Trust (hostname)             </span><span style="color:#008817;">Ok via SAN and CN</span> (SNI mandatory)
 <span style="font-weight:bold;"> Chain of trust</span>               <span style="color:#008817;">Ok   </span><span style="color:#cd00cd;"></span>
 <span style="font-weight:bold;"> EV cert</span> (experimental)       no 
-<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">33 &gt;= 30 days</span> (2024-05-18 07:30 --&gt; 2024-08-16 07:30)
+<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">86 &gt;= 30 days</span> (2024-07-17 07:31 --&gt; 2024-10-15 07:31)
 <span style="font-weight:bold;"> ETS/&quot;eTLS&quot;</span>, visibility info  not present
 <span style="font-weight:bold;"> Certificate Revocation List  </span>--
-<span style="font-weight:bold;"> OCSP URI                     </span>http://r3.o.lencr.org
+<span style="font-weight:bold;"> OCSP URI                     </span>http://r10.o.lencr.org
 <span style="font-weight:bold;"> OCSP stapling                </span><span style="color:#a86437;">not offered</span>
 <span style="font-weight:bold;"> OCSP must staple extension   </span>--
 <span style="font-weight:bold;"> DNS CAA RR</span> (experimental)    <span style="color:#a86437;">not offered</span>
 <span style="font-weight:bold;"> Certificate Transparency     </span><span style="color:#008817;">yes</span> (certificate extension)
 <span style="font-weight:bold;"> Certificates provided</span>        2
-<span style="font-weight:bold;"> Issuer                       </span><i>R3</i> (<i>Let&apos;s Encrypt</i> from <i>US</i>)
-<span style="font-weight:bold;"> Intermediate cert validity   </span>#1: <span style="color:#008817;">ok &gt; 40 days</span> (2025-09-15 16:00). <i>R3</i> &lt;-- <i>ISRG Root X1</i>
+<span style="font-weight:bold;"> Issuer                       </span><i>R10</i> (<i>Let&apos;s Encrypt</i> from <i>US</i>)
+<span style="font-weight:bold;"> Intermediate cert validity   </span>#1: <span style="color:#008817;">ok &gt; 40 days</span> (2027-03-12 23:59). <i>R10</i> &lt;-- <i>ISRG Root X1</i>
 <span style="font-weight:bold;"> Intermediate Bad OCSP</span> (exp.) <span style="color:#008817;">Ok</span>
 
 
@@ -341,7 +341,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> FREAK</span> (CVE-2015-0204)                     <span style="color:#008817;font-weight:bold;">not vulnerable (OK)</span>
 <span style="font-weight:bold;"> DROWN</span> (CVE-2016-0800, CVE-2016-0703)      <span style="color:#008817;font-weight:bold;">not vulnerable on this host and port (OK)</span>
                                            make sure you don&apos;t use this certificate elsewhere with SSLv2 enabled services, see
-                                           <a href="https://search.censys.io/search?resource=hosts&virtual_hosts=INCLUDE&q=595349CD78E6A007ACFC2550274ADEE746D71BE914FF3E479A03BE3F886A9BFA" style="color:black;text-decoration:none;">https://search.censys.io/search?resource=hosts&virtual_hosts=INCLUDE&q=595349CD78E6A007ACFC2550274ADEE746D71BE914FF3E479A03BE3F886A9BFA</a>
+                                           <a href="https://search.censys.io/search?resource=hosts&virtual_hosts=INCLUDE&q=06087B9E754D37A67A3F5A1B42624FDD02429B3D5468FC659EDA19418440C176" style="color:black;text-decoration:none;">https://search.censys.io/search?resource=hosts&virtual_hosts=INCLUDE&q=06087B9E754D37A67A3F5A1B42624FDD02429B3D5468FC659EDA19418440C176</a>
 <span style="font-weight:bold;"> LOGJAM</span> (CVE-2015-4000), experimental      <span style="color:#008817;">not vulnerable (OK):</span> no DH EXPORT ciphers, no common prime detected
 <span style="font-weight:bold;"> BEAST</span> (CVE-2011-3389)                     <span style="color:#008817;">not vulnerable (OK)</span>, no SSL3 or TLS1
 <span style="font-weight:bold;"> LUCKY13</span> (CVE-2013-0169), experimental     <span style="color:#008817;font-weight:bold;">not vulnerable (OK)</span>
@@ -400,7 +400,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Final Score                  </span>81
 <span style="font-weight:bold;"> Overall Grade                </span><span style="color:#008817;font-weight:bold;">A+</span>
 
-<span style="color:white;background-color:black;"> Done 2024-07-14 01:05:35 [ 107s] --&gt;&gt; 5.104.101.30:443 (beta.gouv.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Done 2024-07-21 01:06:17 [ 106s] --&gt;&gt; 5.104.101.30:443 (beta.gouv.fr) &lt;&lt;--</span>
 
 -----------------------------------------------------
 <span style="font-weight:bold;">Done testing now all IP addresses (on port 443): </span>109.232.236.90 5.104.101.30
