--- a/results/aHR0cHM6Ly9iZXRhLmdvdXYuZnI=/testssl.html
+++ b/results/aHR0cHM6Ly9iZXRhLmdvdXYuZnI=/testssl.html
@@ -9,31 +9,27 @@
 <body>
 <pre>
 <span style="font-weight:bold;">
-###########################################################
-    testssl.sh       3.2rc3 from </span><a href="https://testssl.sh/dev/" style="font-weight:bold;color:black;text-decoration:none;">https://testssl.sh/dev/</a>
+#####################################################################</span>
+  <span style="font-weight:bold;">testssl.sh</span> version <span style="font-weight:bold;">3.2rc3</span> from <a href="https://testssl.sh/dev/" style="font-weight:bold;color:black;text-decoration:none;">https://testssl.sh/dev/</a>
 <span style="font-weight:bold;">
-      This program is free software. Distribution and
-             modification under GPLv2 permitted.
-      USAGE w/o ANY WARRANTY. USE IT AT YOUR OWN RISK!
+  This program is free software. Distribution and modification under
+  GPLv2 permitted. USAGE w/o ANY WARRANTY. USE IT AT YOUR OWN RISK!</span>
 
-       Please file bugs @ </span><a href="https://testssl.sh/bugs/" style="font-weight:bold;color:black;text-decoration:none;">https://testssl.sh/bugs/</a>
+  Please file bugs @ <a href="https://testssl.sh/bugs/" style="font-weight:bold;color:black;text-decoration:none;">https://testssl.sh/bugs/</a>
 <span style="font-weight:bold;">
-###########################################################</span>
+#####################################################################</span>
 
- Using &quot;OpenSSL 1.0.2-bad (1.0.2k-dev)&quot; [~183 ciphers]
- on fv-az1446-75:/home/testssl/bin/openssl.Linux.x86_64
- (built: &quot;Sep  1 14:03:44 2022&quot;, platform: &quot;linux-x86_64&quot;)
-
+  Using <i>OpenSSL 1.0.2-bad </i>  [~183 ciphers]
+  on fv-az1116-824:/home/testssl/bin/openssl.Linux.x86_64
 
 <span style="font-weight:bold;">Testing all IPv4 addresses (port 443): </span>109.232.236.90 5.104.101.30
 -----------------------------------------------------
-<span style="color:white;background-color:black;"> Start 2024-09-01 01:12:27                --&gt;&gt; 109.232.236.90:443 (beta.gouv.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Start 2024-09-08 01:08:33                --&gt;&gt; 109.232.236.90:443 (beta.gouv.fr) &lt;&lt;--</span>
 
  Further IP addresses:   5.104.101.30 
  rDNS (109.232.236.90):  ows-109-232-236-90.eu-west-2.compute.outscale.com.
  Service detected:       HTTP
 
-
 <span style="text-decoration:underline;font-weight:bold;"> Testing protocols </span><u>via sockets except NPN+ALPN </u>
 
 <span style="font-weight:bold;"> SSLv2      </span><span style="color:#008817;font-weight:bold;">not offered (OK)</span>
@@ -109,7 +105,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Trust (hostname)             </span><span style="color:#008817;">Ok via SAN and CN</span> (SNI mandatory)
 <span style="font-weight:bold;"> Chain of trust</span>               <span style="color:#008817;">Ok   </span><span style="color:#cd00cd;"></span>
 <span style="font-weight:bold;"> EV cert</span> (experimental)       no 
-<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">44 &gt;= 30 days</span> (2024-07-17 07:31 --&gt; 2024-10-15 07:31)
+<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">37 &gt;= 30 days</span> (2024-07-17 07:31 --&gt; 2024-10-15 07:31)
 <span style="font-weight:bold;"> ETS/&quot;eTLS&quot;</span>, visibility info  not present
 <span style="font-weight:bold;"> Certificate Revocation List  </span>--
 <span style="font-weight:bold;"> OCSP URI                     </span>http://r10.o.lencr.org
@@ -212,16 +208,15 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Final Score                  </span>81
 <span style="font-weight:bold;"> Overall Grade                </span><span style="color:#008817;font-weight:bold;">A+</span>
 
-<span style="color:white;background-color:black;"> Done 2024-09-01 01:13:20 [  55s] --&gt;&gt; 109.232.236.90:443 (beta.gouv.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Done 2024-09-08 01:09:25 [  54s] --&gt;&gt; 109.232.236.90:443 (beta.gouv.fr) &lt;&lt;--</span>
 
 -----------------------------------------------------
-<span style="color:white;background-color:black;"> Start 2024-09-01 01:13:20                --&gt;&gt; 5.104.101.30:443 (beta.gouv.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Start 2024-09-08 01:09:25                --&gt;&gt; 5.104.101.30:443 (beta.gouv.fr) &lt;&lt;--</span>
 
  Further IP addresses:   109.232.236.90 
  rDNS (5.104.101.30):    ows-5-104-101-30.eu-west-2.compute.outscale.com.
  Service detected:       HTTP
 
-
 <span style="text-decoration:underline;font-weight:bold;"> Testing protocols </span><u>via sockets except NPN+ALPN </u>
 
 <span style="font-weight:bold;"> SSLv2      </span><span style="color:#008817;font-weight:bold;">not offered (OK)</span>
@@ -297,7 +292,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Trust (hostname)             </span><span style="color:#008817;">Ok via SAN and CN</span> (SNI mandatory)
 <span style="font-weight:bold;"> Chain of trust</span>               <span style="color:#008817;">Ok   </span><span style="color:#cd00cd;"></span>
 <span style="font-weight:bold;"> EV cert</span> (experimental)       no 
-<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">44 &gt;= 30 days</span> (2024-07-17 07:31 --&gt; 2024-10-15 07:31)
+<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">37 &gt;= 30 days</span> (2024-07-17 07:31 --&gt; 2024-10-15 07:31)
 <span style="font-weight:bold;"> ETS/&quot;eTLS&quot;</span>, visibility info  not present
 <span style="font-weight:bold;"> Certificate Revocation List  </span>--
 <span style="font-weight:bold;"> OCSP URI                     </span>http://r10.o.lencr.org
@@ -400,7 +395,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Final Score                  </span>81
 <span style="font-weight:bold;"> Overall Grade                </span><span style="color:#008817;font-weight:bold;">A+</span>
 
-<span style="color:white;background-color:black;"> Done 2024-09-01 01:14:15 [ 110s] --&gt;&gt; 5.104.101.30:443 (beta.gouv.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Done 2024-09-08 01:10:17 [ 106s] --&gt;&gt; 5.104.101.30:443 (beta.gouv.fr) &lt;&lt;--</span>
 
 -----------------------------------------------------
 <span style="font-weight:bold;">Done testing now all IP addresses (on port 443): </span>109.232.236.90 5.104.101.30
