--- a/results/aHR0cHM6Ly9iZXRhLmdvdXYuZnI=/testssl.html
+++ b/results/aHR0cHM6Ly9iZXRhLmdvdXYuZnI=/testssl.html
@@ -20,14 +20,14 @@
 #####################################################################</span>
 
   Using <i>OpenSSL 1.0.2-bad </i>  [~183 ciphers]
-  on fv-az1980-251:/home/testssl/bin/openssl.Linux.x86_64
+  on fv-az1984-335:/home/testssl/bin/openssl.Linux.x86_64
 
-<span style="font-weight:bold;">Testing all IPv4 addresses (port 443): </span>109.232.236.90 5.104.101.30
+<span style="font-weight:bold;">Testing all IPv4 addresses (port 443): </span>5.104.101.30 109.232.236.90
 -----------------------------------------------------
-<span style="color:white;background-color:black;"> Start 2024-09-29 01:15:24                --&gt;&gt; 109.232.236.90:443 (beta.gouv.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Start 2024-10-06 01:10:57                --&gt;&gt; 5.104.101.30:443 (beta.gouv.fr) &lt;&lt;--</span>
 
- Further IP addresses:   5.104.101.30 
- rDNS (109.232.236.90):  ows-109-232-236-90.eu-west-2.compute.outscale.com.
+ Further IP addresses:   109.232.236.90 
+ rDNS (5.104.101.30):    ows-5-104-101-30.eu-west-2.compute.outscale.com.
  Service detected:       HTTP
 
 <span style="text-decoration:underline;font-weight:bold;"> Testing protocols </span><u>via sockets except NPN+ALPN </u>
@@ -105,7 +105,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Trust (hostname)             </span><span style="color:#008817;">Ok via SAN and CN</span> (SNI mandatory)
 <span style="font-weight:bold;"> Chain of trust</span>               <span style="color:#008817;">Ok   </span><span style="color:#cd00cd;"></span>
 <span style="font-weight:bold;"> EV cert</span> (experimental)       no 
-<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">76 &gt;= 30 days</span> (2024-09-15 07:33 --&gt; 2024-12-14 07:33)
+<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">69 &gt;= 30 days</span> (2024-09-15 07:33 --&gt; 2024-12-14 07:33)
 <span style="font-weight:bold;"> ETS/&quot;eTLS&quot;</span>, visibility info  not present
 <span style="font-weight:bold;"> Certificate Revocation List  </span>--
 <span style="font-weight:bold;"> OCSP URI                     </span>http://r11.o.lencr.org
@@ -208,13 +208,13 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Final Score                  </span>81
 <span style="font-weight:bold;"> Overall Grade                </span><span style="color:#008817;font-weight:bold;">A+</span>
 
-<span style="color:white;background-color:black;"> Done 2024-09-29 01:17:02 [ 101s] --&gt;&gt; 109.232.236.90:443 (beta.gouv.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Done 2024-10-06 01:11:50 [  55s] --&gt;&gt; 5.104.101.30:443 (beta.gouv.fr) &lt;&lt;--</span>
 
 -----------------------------------------------------
-<span style="color:white;background-color:black;"> Start 2024-09-29 01:17:02                --&gt;&gt; 5.104.101.30:443 (beta.gouv.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Start 2024-10-06 01:11:50                --&gt;&gt; 109.232.236.90:443 (beta.gouv.fr) &lt;&lt;--</span>
 
- Further IP addresses:   109.232.236.90 
- rDNS (5.104.101.30):    ows-5-104-101-30.eu-west-2.compute.outscale.com.
+ Further IP addresses:   5.104.101.30 
+ rDNS (109.232.236.90):  ows-109-232-236-90.eu-west-2.compute.outscale.com.
  Service detected:       HTTP
 
 <span style="text-decoration:underline;font-weight:bold;"> Testing protocols </span><u>via sockets except NPN+ALPN </u>
@@ -276,7 +276,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
                               &quot;extended master secret/#23&quot;
 <span style="font-weight:bold;"> Session Ticket RFC 5077 hint </span>300 seconds, session tickets keys seems to be rotated &lt; daily
 <span style="font-weight:bold;"> SSL Session ID support       </span>yes
-<span style="font-weight:bold;"> Session Resumption           </span>Tickets: yes, ID: no
+<span style="font-weight:bold;"> Session Resumption           </span>Tickets no, ID: no
 <span style="font-weight:bold;"> TLS clock skew</span>               Random values, no fingerprinting possible 
 <span style="font-weight:bold;"> Certificate Compression      </span>none
 <span style="font-weight:bold;"> Client Authentication        </span>none
@@ -292,7 +292,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Trust (hostname)             </span><span style="color:#008817;">Ok via SAN and CN</span> (SNI mandatory)
 <span style="font-weight:bold;"> Chain of trust</span>               <span style="color:#008817;">Ok   </span><span style="color:#cd00cd;"></span>
 <span style="font-weight:bold;"> EV cert</span> (experimental)       no 
-<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">76 &gt;= 30 days</span> (2024-09-15 07:33 --&gt; 2024-12-14 07:33)
+<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">69 &gt;= 30 days</span> (2024-09-15 07:33 --&gt; 2024-12-14 07:33)
 <span style="font-weight:bold;"> ETS/&quot;eTLS&quot;</span>, visibility info  not present
 <span style="font-weight:bold;"> Certificate Revocation List  </span>--
 <span style="font-weight:bold;"> OCSP URI                     </span>http://r11.o.lencr.org
@@ -395,10 +395,10 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Final Score                  </span>81
 <span style="font-weight:bold;"> Overall Grade                </span><span style="color:#008817;font-weight:bold;">A+</span>
 
-<span style="color:white;background-color:black;"> Done 2024-09-29 01:18:39 [ 198s] --&gt;&gt; 5.104.101.30:443 (beta.gouv.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Done 2024-10-06 01:12:42 [ 107s] --&gt;&gt; 109.232.236.90:443 (beta.gouv.fr) &lt;&lt;--</span>
 
 -----------------------------------------------------
-<span style="font-weight:bold;">Done testing now all IP addresses (on port 443): </span>109.232.236.90 5.104.101.30
+<span style="font-weight:bold;">Done testing now all IP addresses (on port 443): </span>5.104.101.30 109.232.236.90
 
 </pre>
 </body>
